--- a/core/templates/core/inicio.html
+++ b/core/templates/core/inicio.html
@@ -1,11 +1,13 @@
 {% extends 'core/base.html' %}
 
 {% block titulo %}
-Portada | Mi Web Personal
+    Portada | Mi Web Personal
 {% endblock %}
 
-{% block contenido %}
-<h2>Portada</h2>
-<p>Esto es la portada con html y herencia</p>
+{% block fondo %} {% load static %}{% static 'core/img/home-bg.jpg'%}{% endblock %}
+
+{% block cabecera %}
+    <h1>Juan Pérez</h1>
+    <span class="subheading">Ingeniero Industrial</span>
 {% endblock %}
 
