--- a/core/templates/core/contactenos.html
+++ b/core/templates/core/contactenos.html
@@ -4,8 +4,20 @@
 Contáctenos | Mi Web Personal
 {% endblock %}
 
+{% block fondo %} {% load static %}{% static 'core/img/contact-bg.jpg'%}{% endblock %}
+
+{% block cabecera %}
+    <h1>Contacto</h1>
+    <span class="subheading">Asesoría</span>
+{% endblock %}
 
 {% block contenido %}
-<h2>Contáctenos</h2>
-<p>Esto es la portada</p>
+<div class="row">
+    <div class="col-lg-8 col-md-10 mx-auto">
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe nostrum ullam eveniet pariatur voluptates odit, fuga atque ea nobis sit soluta odio, adipisci quas excepturi maxime quae totam ducimus consectetur?</p>
+          <br>
+          <p><b>Teléfono:</b> +09 876 543 210</p>
+          <p><b>Honorarios:</b> 60€/h (precio base)</p>
+        </div>
+</div>        
 {% endblock %}
